# Recipe-AI

./: .dockerignore  .env  .env.template  .gcloudignore  ACCOUNT_FIX_SUMMARY.md  ARCHITECTURE.md  BUILD_OPTIMIZATION.md  CACHE_BUSTING_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_SUMMARY.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCS_INDEX.md  DOUBLE_API_PREFIX_FIX.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.debug  ENVIRONMENT_VARIABLES_FIX.md  EXACT_ENVIRONMENT_VARIABLES.md  FINAL_GOOGLE_CLOUD_RUN_FIX.md  GITHUB_CLOUD_BUILD_SETUP.md  GOOGLE_APP_ENGINE_DEPLOYMENT.md  GOOGLE_CLOUD_DEPLOYMENT_GUIDE.md  GOOGLE_CLOUD_ENVIRONMENT_VARIABLES.md  GOOGLE_CLOUD_RUN_DEPLOYMENT.md  GOOGLE_CLOUD_RUN_FIX.md  GOOGLE_CLOUD_RUN_READY.md  HOW_THE_PROJECT_WORKS.md  HOW_TO_GET_API_KEYS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VERIFICATION.md  LOGGING_ENHANCEMENTS.md  MAILJET_EMAIL_SETUP.md  Makefile  PRODUCTION_CLEANUP_SOLUTION.md  PRODUCTION_DEPLOYMENT_CONFIG.md  PRODUCTION_READY_CHECKLIST.md  PROJECT_STATUS.md  QUICK_FIX_GUIDE.md  QUICK_REFERENCE.md  (+151 more)
.emergent/: summary.txt
.gcloud/: service.yaml
.github/workflows/: comprehensive-testing.yml
backend/: .env  =5.0.0  requirements.txt  server.py  server_backup.py  stripe_endpoints_fixed.py  stripe_integration.py  stripe_native.py  stripe_payments.py  test_env.py
backend/database/: connection.py
backend/routes/: auth.py
backend/stripe/: stripe_service.py  subscription_handlers.py  webhook_handlers.py
config/: app.yaml  cloudbuild-cloudrun.yaml  settings.py
docs/: API_REFERENCE.md  CHANGELOG_2026-02-25.md  COMPONENT_INTEGRATION_PATTERNS.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FEATURE_INTEGRATION_GUIDE.md  FRONTEND_BACKEND_INTEGRATION.md  IMPLEMENTATION_GUIDE.md  README.md  RECIPE_HISTORY_ARCHITECTURE.md  RECIPE_HISTORY_INTEGRATION.md  STRIPE_PAYMENT_FIX_README.md  STRIPE_PAYMENT_SYSTEM_ANALYSIS.md  STRIPE_SUBSCRIPTION_GO_LIVE_CHECKLIST_2026-02-26.md  STRIPE_WEBSITE_INTEGRATION_GUIDE_2026-02-26.md  SYSTEM_ARCHITECTURE.md  TESTING_EXECUTION_GUIDE.md  TESTING_GUIDE.md  WALMART_INGREDIENT_FIX.md  WEEKLY_RECIPES_FIX.md  WEEKLY_RECIPES_QUICK_REF.md
docs/authentication/: ACCOUNT_VERIFICATION_FLOW.md  ARCHITECTURE_DIAGRAM.md  COMPLETE_VERIFICATION_IMPLEMENTATION.md  SIGNUP_LOGIN_COMPLETE.md  TESTING_SIGNUP_LOGIN.md  VERIFICATION_RESTORATION_SUMMARY.md
docs/components/: APP_COMPONENT.md  RECIPE_DETAIL.md  (+2 more)
frontend/: .env  .env.production  package-lock.json  package.json  package.web.json
tests/: README.md  conftest.py  setup.js
(+60 files in other folders)
